Bug 451923 - Merged medium doesn't fit well for icon size and label width for Polish
Summary: Merged medium doesn't fit well for icon size and label width for Polish
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.24.3
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-26 11:06 UTC by wojnilowicz
Modified: 2022-03-28 16:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wojnilowicz 2022-03-26 11:06:43 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
In Lokalize I see translation unit "Medium".  Its metadata contains
src:/package/contents/ui/ConfigIcons.qml:259
src:/plugins/folder/viewpropertiesmenu.cpp:51
and refers to icon size and label width size.

In Polish it needs to be translated as:
1) "Średnie" for icon size
2) "Średnia" for label size
It cannot be done because the translation has been merged into a single one. Please unmerge it.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 2 wojnilowicz 2022-03-27 07:50:45 UTC
(In reply to Nate Graham from comment #1)
> https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/873

Thanks for the fast response.
The same kind of issue is in #445418 but for a long time no response there. You don't monitor that?
Comment 3 Nate Graham 2022-03-27 21:47:05 UTC
I missed that one, sorry. I will submit a merge request for that too. Hopefully sometime today or tomorrow.

The merge request I submitted to fix this has not been reviewed by anyone yet; would you be able to review it and see if the context I added is helpful?
Comment 4 Fushan Wen 2022-03-28 01:15:41 UTC
Git commit 744a872d6c162cc0ac00477099ccbba9dabd4788 by Fushan Wen, on behalf of Nate Graham.
Committed on 28/03/2022 at 01:14.
Pushed by fusionfuture into branch 'master'.

Folder View: add translation context for short icon-related strings

A lot of these strings are very short and benefit from translation
context.
FIXED-IN: 5.25

M  +18   -11   containments/desktop/package/contents/ui/ConfigIcons.qml
M  +22   -13   containments/desktop/plugins/folder/viewpropertiesmenu.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/744a872d6c162cc0ac00477099ccbba9dabd4788
Comment 5 wojnilowicz 2022-03-28 16:01:27 UTC
(In reply to Nate Graham from comment #3)
> I missed that one, sorry. I will submit a merge request for that too.
> Hopefully sometime today or tomorrow.
> 
> The merge request I submitted to fix this has not been reviewed by anyone
> yet; would you be able to review it and see if the context I added is
> helpful?

No problem and no rush. Thanks.
Regarding your merge request: somebody already merged it. Besides, for me it's more than I needed :)
Comment 6 Nate Graham 2022-03-28 16:03:26 UTC
Ah, great!