Folder View: add translation context for short icon-related strings

A lot of these strings are very short and benefit from translation
context.

BUG: 451923
FIXED-IN: 5.25